--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,7 @@ development:
   encoding: utf8
   database: fotos_development
   username: root
-  password: 
+  password: java
   host: localhost
 
 # Warning: The database defined as "test" will be erased and
@@ -30,7 +30,7 @@ test:
   encoding: utf8
   database: fotos_test
   username: root
-  password: 
+  password: java
   host: localhost
 
 production:
@@ -38,5 +38,5 @@ production:
   encoding: utf8
   database: fotos_production
   username: root
-  password: 
+  password: java
   host: localhost
